--- a/intstudio/src/main/webapp/eucms_files/common.css
+++ b/intstudio/src/main/webapp/eucms_files/common.css
@@ -1459,10 +1459,10 @@ max-width: 500px;
 .about_list_met_11_3 .content { position: relative; height: 320px; }
 .about_list_met_11_3 .content .img { position: relative; z-index: 2; }
 .about_list_met_11_3 .content .img img { width: 100%; max-height: 280px; -o-object-fit: scale-down; object-fit: scale-down; }
-.about_list_met_11_3 .content .text { background: #fff; width: 100%; text-align: left; padding: 5px 15px; position: absolute; top: 130px; height: 173px; z-index: 1; opacity: 0; }
-.about_list_met_11_3 .content .text p { font-size: 14px; color: #ffffff; color: #666666; line-height: 1.5; margin: 0; padding: 30px 0; margin-left: 42%; }
+.about_list_met_11_3 .content .text { background: #fff; width: 100%; text-align: left; padding: 5px 15px; position: absolute; top: 70px; height: 273px; z-index: 1;font-size:18px; opacity: 0; }
+.about_list_met_11_3 .content .text p { font-size: 18px; color: #ffffff; color: #666666; line-height: 1.5; margin: 0; padding: 30px 0; margin-left: 42%; }
 .about_list_met_11_3 .content .text p span{
-  max-height:65px; overflow: hidden;display: block;
+  max-height:120px; overflow: hidden;display: block;
 }
 .about_list_met_11_3 .content .btn-more { margin: 0; margin-top: 20px; }
 @media (max-width:991px) {
@@ -1477,9 +1477,9 @@ max-width: 500px;
   .about_list_met_11_3 .content { height: auto; }
   .about_list_met_11_3 .left { padding: 0; }
   .about_list_met_11_3 .content .text { position: static; top: 130px; }
-  .about_list_met_11_3 .content .text p { margin-left: 0; font-size: 12px; }
+  .about_list_met_11_3 .content .text p { margin-left: 0; font-size: 14px; }
   .about_list_met_11_3 .content .text p span{
-  max-height: 55px; overflow: hidden;display: block;
+  max-height: 130px; overflow: hidden;display: block;
 }
   .about_list_met_11_3 .content .btn-more { margin-top: 10px; }
 }
